--- a/index.html
+++ b/index.html
@@ -190,9 +190,35 @@
               <span class="heroCard__chip">Vanilla • Musk • Amber</span>
             </div>
             <div class="heroCard__grid">
-              <div class="bottle bottle--1" aria-hidden="true"></div>
-              <div class="bottle bottle--2" aria-hidden="true"></div>
-              <div class="bottle bottle--3" aria-hidden="true"></div>
+              <a class="heroCard__item" href="product.html?id=p14" aria-label="Jean Paul Gaultier Ultra Male">
+                <div class="heroCard__imgWrap">
+                  <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Jean%20Paul%20Gaultier%20Ultra%20Male%20set.png" alt="Ultra Male" loading="lazy">
+                </div>
+                <div class="heroCard__meta">
+                  <div class="heroCard__name">Jean Paul Gaultier<br><span class="muted small">Ultra Male</span></div>
+                  <div class="heroCard__tag">Vanilla</div>
+                </div>
+              </a>
+
+              <a class="heroCard__item" href="product.html?id=p27" aria-label="Xerjoff — Erba Pura">
+                <div class="heroCard__imgWrap">
+                  <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Xerjoff%20Erba%20Pura%20fragrance%20collection.png" alt="Erba Pura" loading="lazy">
+                </div>
+                <div class="heroCard__meta">
+                  <div class="heroCard__name">Xerjoff<br><span class="muted small">Erba Pura</span></div>
+                  <div class="heroCard__tag">Musk</div>
+                </div>
+              </a>
+
+              <a class="heroCard__item" href="product.html?id=p18" aria-label="Montale — Arabians Tonka">
+                <div class="heroCard__imgWrap">
+                  <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/Montale%20Paris%20Arabians%20Tonka%20set.png" alt="Arabians Tonka" loading="lazy">
+                </div>
+                <div class="heroCard__meta">
+                  <div class="heroCard__name">Montale Paris<br><span class="muted small">Arabians Tonka</span></div>
+                  <div class="heroCard__tag">Amber</div>
+                </div>
+              </a>
             </div>
             <div class="heroCard__bottom">
               <div>
