--- a/product.html
+++ b/product.html
@@ -3,21 +3,292 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Product — IPORDISE PARFUM</title>
-  <link rel="stylesheet" href="style.css">
+  <title>IPORDISE PARFUM</title>
+  <meta name="description" content="IPORDISE PARFUM – Discover premium fragrances for women, men, unisex and more. Shop best sellers, new arrivals, and deals." />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
-  <header class="site-header">
-    <div class="container">
-      <a href="index.html" class="logo">← Back to shop</a>
+  <!-- Top notice -->
+  <div class="topbar">
+    <div class="container topbar__inner">
+      <span class="topbar__text" data-i18n="topbar_text">Free delivery in Morocco from 299 MAD • Pay on delivery available</span>
+      <a class="topbar__link" href="index.html#deals" data-i18n="topbar_link">See deals</a>
     </div>
+  </div>
+
+  <!-- Header -->
+  <header class="header" id="header">
+    <div class="container header__inner">
+      <button class="icon-btn" id="btnMenu" aria-label="Open menu">
+        <span class="icon icon--menu" aria-hidden="true"></span>
+      </button>
+
+      <a class="brand" href="index.html">
+        <img class="brand__mark" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM Logo">
+        <div class="brand__text">
+          <span class="brand__name">IPORDISE PARFUM</span>
+          <span class="brand__tag" data-i18n="brand_tag">Fragrance Boutique</span>
+        </div>
+      </a>
+
+      <div class="search" role="search">
+        <span class="icon icon--search" aria-hidden="true"></span>
+        <input id="searchInput" type="search" placeholder="Search perfumes, brands, notes..." data-i18n-placeholder="search_ph" autocomplete="off" />
+        <button class="search__clear" id="clearSearch" aria-label="Clear search" title="Clear">×</button>
+      </div>
+
+      <!-- Desktop Navigation -->
+      <nav class="desktop-nav" aria-label="Main navigation">
+        <div class="nav-dropdown">
+          <button class="nav-dropdown__trigger" aria-haspopup="true" aria-expanded="false">
+            Categories
+            <span class="nav-dropdown__arrow">▼</span>
+          </button>
+          <div class="nav-dropdown__menu" aria-hidden="true">
+            <a href="index.html#categories" class="nav-dropdown__item" data-i18n="cat_all">Shop All</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="women" data-i18n="cat_women">Women's Fragrances</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="men" data-i18n="cat_men">Men's Fragrances</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="unisex" data-i18n="cat_unisex">Unisex Fragrances</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="gift" data-i18n="cat_gift">Gift Sets</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="home" data-i18n="cat_home">Home Fragrance</a>
+            <a href="index.html#categories" class="nav-dropdown__item" data-filter="travel" data-i18n="cat_travel">Travel Size</a>
+          </div>
+        </div>
+        <a href="index.html#best" data-i18n="nav_best">Best Sellers</a>
+        <a href="index.html#new" data-i18n="nav_new">New Arrivals</a>
+        <a href="index.html#deals" data-i18n="nav_deals">Deals</a>
+        <a href="index.html#brands" data-i18n="nav_brands">Brands</a>
+        <a href="index.html#contact" data-i18n="nav_contact">Contact</a>
+      </nav>
+
+      <nav class="header__actions" aria-label="Quick actions">
+
+        <div class="lang">
+          <button class="btn btn--small btn--ghost" id="btnLang" aria-haspopup="true" aria-expanded="false" aria-label="Language">
+            <span id="langLabel">EN</span> ▾
+          </button>
+          <div class="langMenu" id="langMenu" role="menu" aria-label="Language menu">
+            <button class="langOption" type="button" data-set-lang="en" role="menuitemradio" aria-checked="true">English</button>
+            <button class="langOption" type="button" data-set-lang="fr" role="menuitemradio" aria-checked="false">Français</button>
+            <button class="langOption" type="button" data-set-lang="ar" role="menuitemradio" aria-checked="false">العربية</button>
+          </div>
+        </div>
+
+        <a class="icon-btn" href="#account" aria-label="Account">
+          <span class="icon icon--user" aria-hidden="true"></span>
+        </a>
+        <button class="icon-btn cart-btn" id="btnCart" aria-label="Open cart">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><circle cx="9" cy="21" r="1"></circle><circle cx="20" cy="21" r="1"></circle><path d="M1 1h4l2.68 13.39a2 2 0 0 0 2 1.61h9.72a2 2 0 0 0 2-1.61L23 6H6"></path></svg>
+          <span class="cart-badge" id="cartCount" role="status" aria-live="polite">0</span>
+        </button>
+      </nav>
+    </div>
+
+    <!-- Mobile menu drawer -->
+    <aside class="drawer" id="menuDrawer" aria-hidden="true">
+      <div class="drawer__overlay" data-close-drawer></div>
+      <div class="drawer__panel" role="dialog" aria-modal="true" aria-label="Menu">
+        <div class="drawer__header">
+          <div class="drawer__title" data-i18n="drawer_menu">Menu</div>
+          <button class="icon-btn" data-close-drawer aria-label="Close menu">
+            <span class="icon icon--close" aria-hidden="true"></span>
+          </button>
+        </div>
+
+        <div class="drawer__content">
+          <div class="drawer__section">
+            <div class="drawer__section-title" data-i18n="nav_categories">Categories</div>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="all" data-i18n="cat_all">Shop All</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="women" data-i18n="cat_women">Women's Fragrances</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="men" data-i18n="cat_men">Men's Fragrances</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="unisex" data-i18n="cat_unisex">Unisex Fragrances</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="gift" data-i18n="cat_gift">Gift Sets</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="home" data-i18n="cat_home">Home Fragrance</a>
+            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="travel" data-i18n="cat_travel">Travel Size</a>
+          </div>
+
+          <a class="drawer__link" href="index.html#best" data-close-drawer data-i18n="nav_best">Best Sellers</a>
+          <a class="drawer__link" href="index.html#new" data-close-drawer data-i18n="nav_new">New Arrivals</a>
+          <a class="drawer__link" href="index.html#deals" data-close-drawer data-i18n="nav_deals">Deals</a>
+          <a class="drawer__link" href="index.html#brands" data-close-drawer data-i18n="nav_brands">Brands</a>
+          <a class="drawer__link" href="index.html#contact" data-close-drawer data-i18n="nav_contact">Contact</a>
+
+          <div class="drawer__box">
+            <div class="drawer__boxTitle">WhatsApp</div>
+            <a class="drawer__boxBtn" href="https://wa.me/212663750210" target="_blank" rel="noopener">Chat on WhatsApp: 0663750210</a>
+            <div class="drawer__muted">Email: <a href="mailto:Ipordise@gmail.com">Ipordise@gmail.com</a></div>
+          </div>
+        </div>
+      </div>
+    </aside>
   </header>
 
-  <main class="container">
-    <section id="productDetail" class="product-detail">
-      <!-- Product details will be rendered here -->
-    </section>
+  <!-- Main -->
+  <main>
+    <div class="container">
+      <div class="breadcrumb">
+        <a href="index.html">← <span data-i18n="back_home">Back to home</span></a>
+      </div>
+    </div>
+    <div class="container product-detail" id="productDetail"
+      <div class="muted" style="padding: 40px 0; text-align: center;">Loading product...</div>
+    </div>
   </main>
+
+  <!-- Footer -->
+  <footer class="footer">
+    <div class="container footer__inner">
+      <div class="footer__brand">
+        <a href="index.html" class="footer-logo">
+          <img class="footer-logo__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/main/logo.jpeg" alt="IPORDISE PARFUM Logo" width="40" height="40">
+          <span class="footer-logo__name">IPORDISE PARFUM</span>
+        </a>
+      </div>
+
+      <div class="footer__cols">
+        <div class="footer__col">
+          <div class="footer__title" data-i18n="footer_shop">Shop</div>
+          <a href="index.html#categories">Categories</a>
+          <a href="index.html#best" data-i18n="sec_best_title">Best sellers</a>
+          <a href="index.html#deals" data-i18n="nav_deals">Deals</a>
+        </div>
+        <div class="footer__col">
+          <div class="footer__title" data-i18n="footer_support">Support</div>
+          <a href="https://wa.me/212663750210" target="_blank" rel="noopener">WhatsApp</a>
+          <a href="mailto:Ipordise@gmail.com">Email</a>
+        </div>
+        
+        <div class="footer__col">
+          <div class="footer__title" data-i18n="footer_legal">Legal</div>
+          <a href="#" class="footer__link" data-open-policy="terms" data-i18n="pol_terms">Terms of Use</a>
+          <a href="#" class="footer__link" data-open-policy="privacy" data-i18n="pol_privacy">Privacy Policy</a>
+          <a href="#" class="footer__link" data-open-policy="shipping" data-i18n="pol_shipping">Shipping & Delivery</a>
+          <a href="#" class="footer__link" data-open-policy="returns" data-i18n="pol_returns">Returns & Refunds</a>
+          <a href="#" class="footer__link" data-open-policy="cookies" data-i18n="pol_cookies">Cookies</a>
+          <span class="muted small">© <span id="year"></span> IPORDISE PARFUM</span>
+          <span class="muted small" data-i18n="footer_rights">All rights reserved.</span>
+        </div>
+      </div>
+    </div>
+  </footer>
+
+  <!-- Cart Drawer -->
+  <aside class="drawer" id="cartDrawer" aria-hidden="true">
+    <div class="drawer__overlay" data-close-drawer></div>
+    <div class="drawer__panel drawer__panel--cart" role="dialog" aria-modal="true" aria-label="Cart">
+      <div class="drawer__header">
+        <div class="drawer__title">Your bag</div>
+        <button class="icon-btn" data-close-drawer aria-label="Close cart">
+          <span class="icon icon--close" aria-hidden="true"></span>
+        </button>
+      </div>
+
+      <div class="drawer__content cart">
+        <div class="cart__items" id="cartItems"></div>
+
+        <div class="cart__summary">
+          <div class="row">
+            <span class="muted" data-i18n="cart_subtotal">Subtotal</span>
+            <strong id="cartSubtotal">0 MAD</strong>
+          </div>
+          <div class="row">
+            <span class="muted" data-i18n="cart_delivery">Delivery</span>
+            <span class="muted" data-i18n="cart_delivery_info">Calculated on WhatsApp</span>
+          </div>
+
+          <button class="btn btn--primary btn--full" id="btnCheckout">
+            Checkout — WhatsApp
+          </button>
+          <button class="btn btn--ghost btn--full" id="btnCheckoutEmail">
+            Checkout — Email
+          </button>
+          <button class="btn btn--ghost btn--full" id="btnOrderDirectEmail">
+            Order by Email (Quick)
+          </button>
+
+          <button class="btn btn--ghost btn--full" id="btnClearCart">
+            Clear cart
+          </button>
+          <p class="muted small">Checkout opens WhatsApp or your email app with your order details. You can also place orders by email directly from this cart and mark them confirmed once you receive our reply.</p>
+        </div>
+
+        <div class="drawer__section" id="orderSection">
+          <div class="drawer__section-title">Your orders</div>
+          <div id="orderList" class="drawer__box"></div>
+        </div>
+      </div>
+    </div>
+  </aside>
+
+  <!-- Checkout Modal -->
+  <div class="modal" id="checkoutModal" aria-hidden="true">
+    <div class="modal__overlay" data-close-modal></div>
+    <div class="modal__panel" role="dialog" aria-modal="true" aria-labelledby="checkoutTitle">
+      <div class="modal__head">
+        <div class="modal__title" id="checkoutTitle" data-i18n="checkout_title">Shipping Information</div>
+        <button class="icon-btn" data-close-modal aria-label="Close">
+          <span class="icon icon--close" aria-hidden="true"></span>
+        </button>
+      </div>
+      <div class="modal__body">
+        <form id="checkoutForm">
+          <p class="muted" style="margin-bottom: 14px;" data-i18n="checkout_desc">Please fill in your details. Your order will be confirmed on WhatsApp.</p>
+          <div class="checkout-form__fields">
+            <label>
+              <span data-i18n="form_name">Name</span>
+              <input type="text" name="name" data-i18n-placeholder="checkout_name_ph" placeholder="Your full name" required />
+            </label>
+            <label>
+              <span data-i18n="checkout_phone_label">Phone Number</span>
+              <input type="tel" name="phone" data-i18n-placeholder="checkout_phone_ph" placeholder="e.g., 0612345678" required />
+            </label>
+            <label>
+              <span data-i18n="checkout_city">City</span>
+              <input type="text" name="city" data-i18n-placeholder="checkout_city_ph" placeholder="e.g., Casablanca" required />
+            </label>
+            <label>
+              <span data-i18n="checkout_address">Address</span>
+              <textarea name="address" rows="3" data-i18n-placeholder="checkout_address_ph" placeholder="Your full address for delivery" required></textarea>
+            </label>
+          </div>
+          <div class="cart__summary" style="margin-top: 16px; padding-top: 16px; border-top: 1px solid var(--line);">
+             <div class="row">
+                <span class="muted" data-i18n="cart_subtotal">Subtotal</span>
+                <strong id="checkoutSubtotal">0 MAD</strong>
+              </div>
+            <div style="display:flex; gap:10px;">
+            <button class="btn btn--primary btn--full" id="btnConfirmCheckout" type="submit" data-i18n="checkout_confirm">
+              Confirm Order — WhatsApp
+            </button>
+            <button class="btn btn--ghost btn--full" id="btnConfirmEmail" type="button">
+              Send Order — Email
+            </button>
+          </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
+
+  <!-- Policies / Legal Modal -->
+  <div class="modal" id="policyModal" aria-hidden="true">
+    <div class="modal__overlay" data-close-modal></div>
+    <div class="modal__panel" role="dialog" aria-modal="true" aria-labelledby="policyTitle">
+      <div class="modal__head">
+        <div class="modal__title" id="policyTitle">Policy</div>
+        <button class="icon-btn" data-close-modal aria-label="Close">
+          <span class="icon icon--close" aria-hidden="true"></span>
+        </button>
+      </div>
+      <div class="modal__body" id="policyBody">
+        <!-- JS injects content -->
+      </div>
+    </div>
+  </div>
 
   <script src="script.js"></script>
   <script src="product-detail.js"></script>
