--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
   <meta name="twitter:image" content="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/hero%20section%20english.png" />
 
   <!-- Favicon (uses store logo) -->
-  <link rel="icon" href="assets/logo.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="assets/logo.svg" />
+  <link rel="icon" href="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" type="image/jpeg" />
+  <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" />
 
   <!-- Structured data -->
   <script type="application/ld+json">
@@ -33,7 +33,7 @@
           "name": "IPORDISE PARFUM",
           "email": "Ipordise@gmail.com",
           "telephone": "+212663750210",
-          "logo": "assets/logo.svg"
+          "logo": "https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg"
         },
         {
           "@type": "WebSite",
@@ -63,8 +63,8 @@
   <!-- Header -->
   <header class="header" id="header">
     <div class="container container--wide header__inner">
-      <a class="brand" href="#">
-        <img class="brand__mark" src="assets/logo.svg" alt="IPORDISE PARFUM Logo" width="40" height="40" decoding="async">
+      <a class="brand" href="https://ipordiseparfum-hash.github.io/ipordiseparfum/" target="_blank" rel="noopener">
+        <img class="brand__mark" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM Logo" width="40" height="40" decoding="async">
         <div class="brand__text">
           <span class="brand__name">IPORDISE PARFUM</span>
           <span class="brand__tag" data-i18n="brand_tag">Fragrance Boutique</span>
@@ -318,7 +318,7 @@
             <a href="#" class="card__link">
               <div class="card__img">
                 <span class="card__tag">New</span>
-                <img src="assets/logo.svg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
+                <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
               </div>
               <div class="card__body">
                 <div class="card__brand">IPORDISE</div>
@@ -338,7 +338,7 @@
             <a href="#" class="card__link">
               <div class="card__img">
                 <span class="card__tag">New</span>
-                <img src="assets/logo.svg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
+                <img src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="Coming Soon" loading="lazy" width="200" height="200" decoding="async">
               </div>
               <div class="card__body">
                 <div class="card__brand">IPORDISE</div>
@@ -511,8 +511,8 @@
     <footer class="footer">
       <div class="container footer__inner">
         <div class="footer__brand">
-          <a href="#" class="footer-logo">
-            <img class="footer-logo__img" src="assets/logo.svg" alt="IPORDISE PARFUM Logo" width="40" height="40" decoding="async">
+          <a href="https://ipordiseparfum-hash.github.io/ipordiseparfum/" target="_blank" rel="noopener" class="footer-logo">
+            <img class="footer-logo__img" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM Logo" width="40" height="40" decoding="async">
             <span class="footer-logo__name">IPORDISE PARFUM</span>
           </a>
         </div>
@@ -722,10 +722,12 @@
       <svg class="icon-close" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"></line><line x1="6" y1="6" x2="18" y2="18"></line></svg>
     </button>
 
+    <div class="chatbot__overlay" id="chatbotOverlay" aria-hidden="true"></div>
+
     <div class="chatbot__panel" role="dialog" aria-modal="false" aria-label="Chat assistant">
       <div class="chatbot__head">
         <div class="chatbot__brand">
-          <img class="chatbot__logo" src="assets/logo.svg" alt="" width="28" height="28" decoding="async">
+          <img class="chatbot__logo" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="" width="28" height="28" decoding="async">
           <div>
             <div class="chatbot__title" data-i18n="chat_title">Ipordise Assistant</div>
             <div class="chatbot__sub" data-i18n="chat_sub">Quick help to choose a scent.</div>
