--- a/product.html
+++ b/product.html
@@ -12,6 +12,7 @@
 </head>
 
 <body>
+  <a class="skipLink" href="#main">Skip to content</a>
   <!-- Top notice -->
   <div class="topbar">
     <div class="container topbar__inner">
@@ -23,10 +24,6 @@
   <!-- Header -->
   <header class="header" id="header">
     <div class="container header__inner">
-      <button class="icon-btn" id="btnMenu" aria-label="Open menu">
-        <span class="icon icon--menu" aria-hidden="true"></span>
-      </button>
-
       <a class="brand" href="index.html">
         <img class="brand__mark" src="https://raw.githubusercontent.com/ipordiseparfum-hash/ipordiseparfum/refs/heads/main/logo.jpeg" alt="IPORDISE PARFUM Logo">
         <div class="brand__text">
@@ -40,30 +37,6 @@
         <input id="searchInput" type="search" placeholder="Search perfumes, brands, notes..." data-i18n-placeholder="search_ph" autocomplete="off" />
         <button class="search__clear" id="clearSearch" aria-label="Clear search" title="Clear">×</button>
       </div>
-
-      <!-- Desktop Navigation -->
-      <nav class="desktop-nav" aria-label="Main navigation">
-        <div class="nav-dropdown">
-          <button class="nav-dropdown__trigger" aria-haspopup="true" aria-expanded="false">
-            Categories
-            <span class="nav-dropdown__arrow">▼</span>
-          </button>
-          <div class="nav-dropdown__menu" aria-hidden="true">
-            <a href="index.html#categories" class="nav-dropdown__item" data-i18n="cat_all">Shop All</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="women" data-i18n="cat_women">Women's Fragrances</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="men" data-i18n="cat_men">Men's Fragrances</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="unisex" data-i18n="cat_unisex">Unisex Fragrances</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="gift" data-i18n="cat_gift">Gift Sets</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="home" data-i18n="cat_home">Home Fragrance</a>
-            <a href="index.html#categories" class="nav-dropdown__item" data-filter="travel" data-i18n="cat_travel">Travel Size</a>
-          </div>
-        </div>
-        <a href="index.html#best" data-i18n="nav_best">Best Sellers</a>
-        <a href="index.html#new" data-i18n="nav_new">New Arrivals</a>
-        <a href="index.html#deals" data-i18n="nav_deals">Deals</a>
-        <a href="index.html#brands" data-i18n="nav_brands">Brands</a>
-        <a href="index.html#contact" data-i18n="nav_contact">Contact</a>
-      </nav>
 
       <nav class="header__actions" aria-label="Quick actions">
 
@@ -88,53 +61,11 @@
       </nav>
     </div>
 
-    <!-- Mobile menu drawer -->
-    <aside class="drawer" id="menuDrawer" aria-hidden="true">
-      <div class="drawer__overlay" data-close-drawer></div>
-      <div class="drawer__panel" role="dialog" aria-modal="true" aria-label="Menu">
-        <div class="drawer__header">
-          <div class="drawer__title" data-i18n="drawer_menu">Menu</div>
-          <button class="icon-btn" data-close-drawer aria-label="Close menu">
-            <span class="icon icon--close" aria-hidden="true"></span>
-          </button>
-        </div>
-
-        <div class="drawer__content">
-          <div class="drawer__section">
-            <div class="drawer__section-title" data-i18n="nav_categories">Categories</div>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="all" data-i18n="cat_all">Shop All</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="women" data-i18n="cat_women">Women's Fragrances</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="men" data-i18n="cat_men">Men's Fragrances</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="unisex" data-i18n="cat_unisex">Unisex Fragrances</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="gift" data-i18n="cat_gift">Gift Sets</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="home" data-i18n="cat_home">Home Fragrance</a>
-            <a class="drawer__link" data-close-drawer href="index.html#categories" data-filter="travel" data-i18n="cat_travel">Travel Size</a>
-          </div>
-
-          <a class="drawer__link" href="index.html#best" data-close-drawer data-i18n="nav_best">Best Sellers</a>
-          <a class="drawer__link" href="index.html#new" data-close-drawer data-i18n="nav_new">New Arrivals</a>
-          <a class="drawer__link" href="index.html#deals" data-close-drawer data-i18n="nav_deals">Deals</a>
-          <a class="drawer__link" href="index.html#brands" data-close-drawer data-i18n="nav_brands">Brands</a>
-          <a class="drawer__link" href="index.html#contact" data-close-drawer data-i18n="nav_contact">Contact</a>
-
-          <div class="drawer__box">
-            <div class="drawer__boxTitle">WhatsApp</div>
-            <a class="drawer__boxBtn" href="https://wa.me/212663750210" target="_blank" rel="noopener">Chat on WhatsApp: 0663750210</a>
-            <div class="drawer__muted">Email: <a href="mailto:Ipordise@gmail.com">Ipordise@gmail.com</a></div>
-          </div>
-        </div>
-      </div>
-    </aside>
   </header>
 
   <!-- Main -->
-  <main>
-    <div class="container">
-      <div class="breadcrumb">
-        <a href="index.html">← <span data-i18n="back_home">Back to home</span></a>
-      </div>
-    </div>
-    <div class="container product-detail" id="productDetail"
+  <main id="main">
+    <div class="container product-detail" id="productDetail">
       <div class="muted" style="padding: 40px 0; text-align: center;">Loading product...</div>
     </div>
   </main>
